--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,26 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div>
+  <div>
+    <h2>注文履歴一覧</h2>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>購入日時</th>
+        <th>購入者</th>
+        <th>注文個数</th>
+        <th>注文ステータス</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= @orders.each do |order| %>
+        <tr>
+          <th><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></th>
+          <th><%= order.customer_id.last_name %><%= order.customer_id.first_name %></th>
+          <th><%= order.order_details.amount.sum %></th>
+          <th><%= order.status %></th>
+        </tr>
+      <% end %>
+      <%= pagenate @orders %>
+    </tbody>
+  </table>
+</div>
