--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,52 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class="container">
+  <div class="row my-3">
+    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">商品新規登録</h2>
+  </div>
+  <%= form_with model: @item,url: admin_item_path(@item.id),method: :patch do |f| %>
+    <div class="mb-3 row">
+      <%= f.label "商品画像" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= f.file_field :image,accept: "image/*",class: "form-control-file" %>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <%= f.label "商品名" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :name,autofocus: true,autocomplete: "商品名",class: "form-control" %>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <%= f.label "商品説明" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= f.text_area :introduction,autofocus: true,autocomplete: "ここに説明文を記述します",rows: "3",class: "form-control" %>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <%= f.label "ジャンル" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name),prompt: "-- 選択してください --",class: "form-control" %>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <%= f.label "税抜価格" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10 input-group">
+        <%= f.number_field :price,autofocus: true,autocomplete: "1000",class: "form-control" %>
+        <div class="input-group-append">
+          <span class="input-group-text">円</span>
+        </div>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <%= f.label "販売ステータス" ,class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-2">
+        <%= f.radio_button :is_active, true, autofocus: true,class: "form-check form-check-inline" %>販売中
+      </div>
+      <div class="col-sm-2">
+        <%= f.radio_button :is_active, false, autofocus: true,class: "form-check form-check-inline" %>販売停止中
+      </div>
+    </div>
+    <div class="mx-auto row">
+      <%= f.submit "変更を保存",class: "btn btn-success btn-lg" %>
+    </div>
+  <% end %>
+</div>
