--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,50 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="card mb-3 border-0">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <%= image_tag @item.image %>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body row">
+        <p class="card-text col-sm-2">
+          商品名
+        </p>
+        <h3 class="card-text col-sm-10">
+          <%= @item.name %>
+        </h3>
+      </div>
+      <div class="card-body row">
+        <p class="card-text col-sm-2">
+          商品説明
+        </p>
+        <h3 class="card-text col-sm-10">
+          <%= @item.introduction %>
+        </h3>
+      </div>
+      <div class="card-body row">
+        <p class="card-text col-sm-2">
+          ジャンル
+        </p>
+        <h3 class="card-text col-sm-10">
+          <%= @item.genre.name %>
+        </h3>
+      </div>
+      <div class="card-body row">
+        <p class="card-text col-sm-2">
+          税込価格(税抜価格)
+        </p>
+        <h3 class="card-text col-sm-10">
+          <%= @item.with_tax_price %>
+          (<%= @item.price %>)
+        </h3>
+      </div>
+      <div class="card-body row">
+        <p class="card-text col-sm-2">
+          販売ステータス
+        </p>
+        <h3 class="card-text col-sm-10">
+          <%= @item.is_active %>
+        </h3>
+      </div>
+    </div>
+  </div>
+</div>
