[fix] spell miss

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -18,11 +18,11 @@
           <th><%= item.id %></th>
           <th><%= item.name %></th>
           <th><%= item.price %></th>
-          <th><%= item.genres.name %></th>
+          <th><%= item.genre.name %></th>
           <th><%= item.is_active %> </th>
         </tr>
       <% end %>
-      <%= paginate @items %>
     </tbody>
   </table>
+  <%= paginate @items %>
 </div>
