--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,6 +2,9 @@
   <div class="row my-3">
     <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">商品一覧</h3>
   </div>
+  <%= link_to new_admin_item_path do %>
+    <button name="button"></button>
+  <% end %>
   <table class="table">
     <thead class="thead-light">
       <tr>
@@ -16,7 +19,11 @@
       <%= @items.each do |item| %>
         <tr>
           <th><%= item.id %></th>
-          <th><%= item.name %></th>
+          <th>
+            <%= link_to admin_item_path(item.id) do %>
+              <%= item.name %>
+            <% end %>
+          </th>
           <th><%= item.price %></th>
           <th><%= item.genre.name %></th>
           <th><%= item.is_active %> </th>
