--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -45,6 +45,7 @@
           <%= @item.is_active %>
         </h3>
       </div>
+      <%= link_to "編集する", edit_admin_item_path(@item.id),class: "btn btn-info" %>
     </div>
   </div>
 </div>
