--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,28 +1,32 @@
 <div class="container">
-  <div class="row my-3">
-    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">注文履歴一覧</h3>
+  <div class="row">
+    <div class="col-4 m-4">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">注文履歴一覧</h3>
+    </div>
   </div>
   <div class="row">
-    <table class="table">
-      <thead class="thead-light">
-        <tr>
-          <th>購入日時</th>
-          <th>購入者</th>
-          <th>注文個数</th>
-          <th>注文ステータス</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= @orders.each do |order| %>
+    <div class="col justify-content-center shadow-sm">
+      <table class="table">
+        <thead class="thead-light">
           <tr>
-            <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
-            <td><%= order.customer_id.last_name %><%= order.customer_id.first_name %></td>
-            <td><%= order.order_details.amount.sum %></td>
-            <td><%= order.status %></td>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
           </tr>
-        <% end %>
-        <%= paginate @orders %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+            <tr>
+              <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+              <td><%= order.customer_id.last_name %><%= order.customer_id.first_name %></td>
+              <td><%= order.order_details.amount.sum %></td>
+              <td><%= order.status %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= paginate @orders %>
+    </div>
   </div>
 </div>
