--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,51 +1,57 @@
 <div class="container">
-  <div class="row my-3">
-    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">商品新規登録</h3>
+  <div class="row">
+    <div class="col-4 my-3">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">商品編集</h3>
+    </div>
   </div>
   <%= form_with model: @item,url: admin_item_path(@item.id),method: :patch do |f| %>
-    <div class="mb-3 row">
-      <%= f.label "商品画像" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= f.file_field :image,accept: "image/*",class: "form-control-file" %>
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <%= f.label "商品名" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :name,autofocus: true,autocomplete: "商品名",class: "form-control" %>
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <%= f.label "商品説明" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= f.text_area :introduction,autofocus: true,autocomplete: "ここに説明文を記述します",rows: "3",class: "form-control" %>
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <%= f.label "ジャンル" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name),prompt: "-- 選択してください --",class: "form-control" %>
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <%= f.label "税抜価格" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10 input-group">
-        <%= f.number_field :price,autofocus: true,autocomplete: "1000",class: "form-control" %>
-        <div class="input-group-append">
-          <span class="input-group-text">円</span>
+    <div class="row no-gutters justify-content-center">
+      <div class="col-6 mx-2 px-0 mt-3 form-group" >
+        <div class="mb-3 row">
+          <%= f.label "商品画像" ,class: "col-3 col-form-label" %>
+          <div class="col-9">
+            <%= f.file_field :image,accept: "image/*",class: "form-control-file" %>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <%= f.label "商品名" ,class: "col-3 col-form-label" %>
+          <div class="col-9">
+            <%= f.text_field :name,autofocus: true,placeholder: "商品名",class: "form-control" %>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <%= f.label "商品説明" ,class: "col-3 col-form-label" %>
+          <div class="col-9">
+            <%= f.text_area :introduction,autofocus: true,placeholder: "ここに説明文を記述します",rows: "6",class: "form-control" %>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <%= f.label "ジャンル" ,class: "col-3 col-form-label" %>
+          <div class="col-9">
+            <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name),prompt: "-- 選択してください --",class: "form-control " %>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <%= f.label "税抜価格" ,class: "col-3 col-form-label" %>
+          <div class="col-9 input-group">
+            <%= f.text_field :price,autofocus: true,placeholder: "1000",class: "form-control" %>
+            <div class="input-group-append-sm">
+              <span class="input-group-text">円</span>
+            </div>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <%= f.label "販売ステータス" ,class: "col-3 col-form-label" %>
+          <div class="col-4">
+            <%= f.radio_button :is_active, true, autofocus: true,class: "form-check form-check-inline" %>販売中
+          </div>
+          <div class="col-5">
+            <%= f.radio_button :is_active, false, autofocus: true,class: "form-check form-check-inline" %>販売停止中
+          </div>
         </div>
       </div>
     </div>
-    <div class="mb-3 row">
-      <%= f.label "販売ステータス" ,class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-2">
-        <%= f.radio_button :is_active, true, autofocus: true,class: "form-check form-check-inline" %>販売中
-      </div>
-      <div class="col-sm-2">
-        <%= f.radio_button :is_active, false, autofocus: true,class: "form-check form-check-inline" %>販売停止中
-      </div>
-    </div>
-    <div class="mx-auto row">
+    <div class="row justify-content-center mt-2">
       <%= f.submit "変更を保存",class: "btn btn-success btn-lg" %>
     </div>
   <% end %>
