--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,35 +1,43 @@
 <div class="container">
-  <div class="row my-3">
-    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">商品一覧</h3>
-  </div>
-  <%= link_to new_admin_item_path do %>
-    <button name="button"></button>
-  <% end %>
-  <table class="table">
-    <thead class="thead-light">
-      <tr>
-        <th>商品ID</th>
-        <th>商品名</th>
-        <th>税抜価格</th>
-        <th>ジャンル</th>
-        <th>ステータス</th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= @items.each do |item| %>
-        <tr>
-          <th><%= item.id %></th>
-          <th>
-            <%= link_to admin_item_path(item.id) do %>
-              <%= item.name %>
-            <% end %>
-          </th>
-          <th><%= item.price %></th>
-          <th><%= item.genre.name %></th>
-          <th><%= item.is_active %> </th>
-        </tr>
+  <div class="row">
+    <div class="col-4 my-3">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">商品一覧</h3>
+    </div>
+    <div class="col-2 ml-auto my-4">
+      <%= link_to new_admin_item_path do %>
+        <i class="fas fa-plus-circle fa-3x"></i>
       <% end %>
-    </tbody>
-  </table>
-  <%= paginate @items %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col justify-content-center shadow-sm">
+      <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>税抜価格</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <th><%= item.id %></th>
+              <th>
+                <%= link_to admin_item_path(item.id) do %>
+                  <%= item.name %>
+                <% end %>
+              </th>
+              <th><%= item.price %></th>
+              <th><%= item.genre.name %></th>
+              <th><%= item.is_active %> </th>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= paginate @items %>
+    </div>
+  </div>
 </div>
