[update] edit homes_top_action views_admin_homes_top fix views_admin_items_index fix admin/customers_controller create views/admin/customers create

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col justify-content-center shadow-sm">
+    <div class="col justify-content-center">
       <table class="table">
         <thead class="thead-light">
           <tr>
@@ -19,7 +19,7 @@
           <% @orders.each do |order| %>
             <tr>
               <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
-              <td><%= order.customer_id.last_name %><%= order.customer_id.first_name %></td>
+              <td><%= order.customer.last_name %><%= order.customer.first_name %></td>
               <td><%= order.order_details.amount.sum %></td>
               <td><%= order.status %></td>
             </tr>
