--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col justify-content-center shadow-sm">
+    <div class="col justify-content-center">
       <table class="table">
         <thead class="thead-light">
           <tr>
