--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,91 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">
+        <%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集
+        </h3>
+    </div>
+  </div>
+  <%= form_with model: @customer,url: admin_customer_path(@customer.id),method: :patch do |f| %>
+    <div class="card border-0">
+      <div class="card-body">
+        <div class="row mt-2">
+          <p class="card-text col-2">
+            会員ID
+          </p>
+          <h5 class="card-text col-10">
+            <%= @customer.id %>
+          </h5>
+        </div>
+        <div class="row mt-2">
+          <span class="card-text col-2">
+            <%= f.label "氏名" ,class: "col-2 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row mt-2">
+          <span class="card-text col-2">
+            <%= f.label "フリガナ" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row mt-2">
+          <span class="card-text col-2">
+            <%= f.label "郵便番号" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row">
+          <span class="card-text col-2">
+            <%= f.label "住所" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-10">
+            <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row mt-2">
+          <span class="card-text col-2">
+            <%= f.label "電話番号" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row mt-2">
+          <span class="card-text col-2">
+            <%= f.label "メールアドレス" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row">
+          <span class="card-text col-2">
+            <%= f.label "フリガナ" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-3">
+            <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>有効
+          </span>
+          <span class="card-text col-3">
+            <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>退会
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-2">
+      <%= f.submit "変更を保存",class: "btn btn-success btn-lg" %>
+    </div>
+  <% end %>
+</div>
