--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,87 @@
 <div class="container">
-  <div class="row my-3">
-    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">会員一覧</h3>
+  <div class="row">
+    <div class="col-4 my-3">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">
+        <%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細
+        </h3>
+    </div>
   </div>
-  <div class="row no-gutters">
+  <div class="card border-0">
+    <div class="card-body">
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          会員ID
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.id %>
+        </h5>
+      </div>
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          氏名
+        </p>
+        <h5 class="card-text col-5">
+          <%= @customer.last_name %>
+        </h5>
+        <h5 class="card-text col-5">
+          <%= @customer.first_name %>
+        </h5>
+      </div>
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          フリガナ
+        </p>
+        <h5 class="card-text col-5">
+          <%= @customer.last_name_kana %>
+        </h5>
+        <h5 class="card-text col-5">
+          <%= @customer.first_name_kana %>
+        </h5>
+      </div>
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          郵便番号
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.postal_code %>
+        </h5>
+      </div>
+      <div class="row">
+        <p class="card-text col-2">
+          住所
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.address %>
+        </h5>
+      </div>
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          電話番号
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.telephone_number %>
+        </h5>
+      </div>
+      <div class="row mt-2">
+        <p class="card-text col-2">
+          メールアドレス
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.email %>
+        </h5>
+      </div>
+      <div class="row">
+        <p class="card-text col-2">
+          会員ステータス
+        </p>
+        <h5 class="card-text col-10">
+          <%= @customer.is_deleted %>
+        </h5>
+      </div>
+    </div>
   </div>
+  <div class="row justify-content-center">
+    <%= link_to "編集する",edit_admin_customer_path(@customer.id),class: "btn btn-info btn-lg px-5" %>
+    <%= link_to "注文一覧を見る",admin_path,class: "btn btn-primary btn-lg px-5" %>
+  </div>
+</div>
