--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,93 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h3 class="bg-secondary text-white text-center m-3 px-3 rounded">
+        <%= @order.customer.last_name %><%= @order.customer.first_name %>さんの会員詳細
+        </h3>
+    </div>
+  </div>
+  <div class="row mt-2">
+    <ul class="list-group list-group-horizontal border-0">
+      <li class="list-group-item font-weight-bold">購入者</li>
+      <li class="list-group-item">
+        <%= @order.customer.last_name %> <%= @order.customer.first_name %>
+      </li>
+    </ul>
+    <ul class="list-group list-group-horizontal border-0">
+      <li class="list-group-item font-weight-bold">注文日</li>
+      <li class="list-group-item">
+        <%= @order.created_at.strftime('%Y/%m/%d') %>
+      </li>
+    </ul>
+    <ul class="list-group list-group-horizontal border-0">
+      <li class="list-group-item font-weight-bold">配送先</li>
+      <li class="list-group-item">
+        〒<%= @order.postal_code %> <%= @order.address %><br>
+        <%= @order.name %>
+      </li>
+    </ul>
+    <ul class="list-group list-group-horizontal border-0">
+      <li class="list-group-item font-weight-bold">支払方法</li>
+      <li class="list-group-item">
+        <%= @order.payment_method %>
+      </li>
+    </ul>
+    <ul class="list-group list-group-horizontal border-0">
+      <li class="list-group-item font-weight-bold">注文ステータス</li>
+      <li class="list-group-item">
+        <%= form_with model: @order,url: admin_update_status_path(@order.id),method: :patch do |f| %>
+          <%= f.select :status, options_from_collection_for_select(1,2,3,4),class: "form-control " %>
+          <%= f.submit "更新",class: "btn btn-success" %>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+  <div class="row mt-2">
+    <div class="col w-75 h-25 position-relative">
+      <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_details.each do |order_detail| %>
+            <tr>
+              <th><%= order_detail.item.name %></th>
+              <th>
+                <%= order_detail.price %>
+              </th>
+              <th><%= order_detail.amount %></th>
+              <th><%= order_detail.sub_total %></th>
+              <%= form_with model: order_detail,url: admin_update_making_process_path(order_detail.id),method: :patch do |f| %>
+                <th>
+                  <%= f.select :making_status, options_from_collection_for_select(1,2,3),class: "form-control " %>
+                </th>
+                <th>
+                  <%= f.submit "更新",class: "btn btn-success" %>
+                </th>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col w-25 h-25 justify-content-center">
+      <ul class="list-group list-group-horizontal align-bottom">
+        <li class="list-group-item">商品合計</li>
+        <li class="list-group-item"><%= @order.total_payment %></li>
+      </ul>
+      <ul class="list-group list-group-horizontal align-bottom">
+        <li class="list-group-item">送料</li>
+        <li class="list-group-item"><%= @order.postage %></li>
+      </ul>
+      <ul class="list-group list-group-horizontal align-bottom">
+        <li class="list-group-item">請求金額合計</li>
+        <li class="list-group-item"><%= @order.billing_total %></li>
+      </ul>
+    </div>
