--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -82,6 +82,6 @@
   </div>
   <div class="row justify-content-center">
     <%= link_to "編集する",edit_admin_customer_path(@customer.id),class: "btn btn-info btn-lg px-5" %>
-    <%= link_to "注文一覧を見る",admin_path,class: "btn btn-primary btn-lg px-5" %>
+    <%= link_to "注文一覧を見る",admin_roopath,class: "btn btn-primary btn-lg px-5" %>
   </div>
 </div>
