--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row my-3">
-    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">ジャンル編集</h3>
+    <h3 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">ジャンル一覧・追加</h3>
   </div>
   <div class="row">
     <%= form_with model: @genre,url: admin_genres_path,method: :post do |f| %>
