--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div class="container">
+  <div class="row my-3">
+    <h4 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">配送先編集</h4>
+  </div>
+  <%= form_with model: @address,url: addresses_path,method: :patch do |f| %>
+  <div class="row form-group">
+    <div class="col-3">
+      <%= f.label :"郵便番号(ハイフンなし)" %>
+    </div>
+    <div class="col-3">
+      <%= f.text_field :postal_code,autofocus: true,placeholder:"郵便番号",class: "form-control form-control-sm" %>
+    </div>
+  </div>
+  <div class="row form-group">
+    <div class="col-3">
+      <%= f.label :"住所" %>
+    </div>
+    <div class="col-6">
+      <%= f.text_field :address,autofocus: true,placeholder:"住所",class: "form-control form-control-sm" %>
+    </div>
+  </div>
+  <div class="row form-group">
+    <div class="col-3">
+      <%= f.label :"宛名" %>
+    </div>
+    <div class="col-3">
+      <%= f.text_field :name,autofocus: true,placeholder:"名前",class: "form-control form-control-sm" %>
+    </div>
+    <div class="col-2 offset-3">
+      <%= f.submit "変更内容を保存",class: "btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
+</div>
