--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -51,7 +51,7 @@
             <td class="justify-content-around">
               <span><%= link_to "編集する",edit_address_path(address.id),class: "btn btn-success" %></span>
               <span>
-                <%= link_to "削除する",edit_address_path(address.id),method: :delete, "data-confirm" =>"本当によろしいですか？"class: "btn btn-danger" %>
+                <%= link_to "削除する",edit_address_path(address.id),method: :delete, "data-confirm" =>"本当によろしいですか？",class: "btn btn-danger" %>
               </span>
             </td>
           </tr>
