--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,77 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
+        会員情報編集
+      </h4>
+    </div>
+  </div>
+  <%= form_with model: @customer,url: update_information_path,method: :patch do |f| %>
+    <div class="card border-0">
+      <div class="card-body">
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "氏名" ,class: "col-2 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "フリガナ" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "郵便番号" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "住所" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-10">
+            <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "電話番号" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
+          </span>
+        </div>
+        <div class="row form-group">
+          <span class="card-text col-2">
+            <%= f.label "メールアドレス" ,class: "col-3 col-form-label" %>
+          </span>
+          <span class="card-text col-5">
+            <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center form-group">
+      <div class="col-3">
+        <%= f.submit "変更を保存",class: "btn btn-success mx-3" %>
+      </div>
+      <div class="col-3 offset-2">
+        <%= link_to "削除する",information_path,class: "btn btn-danger" %>
+      </div>
+    </div>
+  <% end %>
+</div>
