--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,7 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+<div class="container my-5 py-5">
+  <div class="row justify-content-center my-5py-5">
+    <div class="col align-self-center text-center my-5 py-5">
+      <h1 class="my-5 py-5">ご注文ありがとうございました！</h1>
+    </div>
+  </div>
+</div>
