--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,93 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
+        新規会員登録
+      </h4>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "publics/shared/links" %>
+  <%= form_with model: @customers,url:  customer_registration_path do |f| %>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "氏名" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
+      </span>
+      <span class="col-3">
+        <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
+      </span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "フリガナ" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
+      </span>
+      <span class="col-3">
+        <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
+      </span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "郵便番号" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "住所" ,class: "form-label" %>
+      </span>
+      <span class="col-6">
+        <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
+      </span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "電話番号" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "メールアドレス" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+    <span class="col-2">
+      <%= f.label "パスワード" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.password_field :password, autocomplete: "new-password",class: "form-control" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-2">
+        <%= f.label "パスワード" ,class: "form-label" %>
+      </span>
+      <span class="col-3">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password",class: "form-control" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+    <div class="row form_group justify-content-center">
+      <span class="col-3 offset-2">
+        <%= f.submit "新規登録",class: "btn btn-success btn-block" %>
+      </span>
+      <span class="col-3"></span>
+    </div>
+  <% end %>
+  <%= render "public/shared/links" %>
+</div>
