[update] admin access restriction create method for image of item model public customer show screen creating

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -79,7 +79,7 @@
             <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>有効
           </span>
           <span class="card-text col-3">
-            <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>退会
+            <%= f.radio_button :is_deleted, false, autofocus: true,class: "form-check form-check-inline" %>退会
           </span>
         </div>
       </div>
