[update] customerログイン時に名前をヘッダーに表示 customerのレイアウト作成 ・カート内商品のレイアウト、アクション作成 ・商品一覧のレイアウト、商品詳細のレイアウト、商品コントローラーの完成 ・注文履歴一覧作成 ・注文詳細画面作成

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,7 +7,7 @@
     <% @items.each do |item| %>
       <div class="card col-md-3 bg-light border-warning rounded shadow-sm p-4">
         <%= link_to item_path(item.id) do %>
-          <%= image_tag item.image,class: "card-img-top"; %>
+          <%= image_tag item.get_image(190,190),class: "card-img-top"; %>
         <% end %>
         <div class="card-body">
           <p class="card-title"><%= item.name %></p><br>
