--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
           <%= link_to 'ながのCAKE',root_path,class: 'h3 p-2 m-3 text-white' %>
+          <% if customer_signed_in? %>
+            <p>ようこそ、<%= current_customer.last_name %>さん</p>
+          <% end %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavdropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
