--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,55 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class="container">
+  <div class="row py-3">
+    <div class="col-4">
+      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">ショッピングカート</h4>
+    </div>
+    <div class="col-4 offset-3">
+      <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete, "data-confirm" =>"本当にカート内のアイテム全てを消してよろしいですか?",class: "btn btn-danger px-2" %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <th>商品名</th>
+        <th>単価(税込)</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th></th>
+      </thead>
+      <tbody>
+        <% @cart_items.each do |cart_item| %>
+          <tr>
+            <td><%= cart_item_item.get_image(100,100) %><%= cart_item.item.name %></td>
+            <td><%= cart_item.item.with_tax_price %></td>
+            <td>
+              <%= form_with model: cart_item,url: cart_item_path,method: patch do |f| %>
+                <%= f.select :amount, *[1..10] ,class: "form-control" %>
+                <%= f.submit "変更",class: "btn btn-success" %>
+              <% end %>
+            </td>
+            <td><%= cart_item.sub_total %></td>
+            <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, "data-confirm" =>"本当によろしいですか?",class: "btn btn-danger px-2" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="row py-3">
+    <div class="col-4">
+      <%= link_to "買い物を続ける", root_path,class: "btn btn-primary px-2" %>
+    </div>
+    <div class="col-4 offset-3">
+      <table class="table">
+        <tbody>
+          <th>
+            <td class="bg-secondary">合計金額</td>
+            <td><% @total +=  cart_item.subtotal %></td>
+          </th>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row justify-content-center py-3">
+    <%= link_to "情報入力に進む",new_order_path,class: "btn btn-lg btn-success px-3" %>
+  </div>
+</div>
