--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,14 +2,14 @@
   <div class="card mt-5 py-5 border-0 bg-light">
     <div class="row no-gutters justify-content-center mt-5">
       <div class="col-md-4">
-        <%= image_tag @item.image,width: "100%", height: "100%" %>
+        <%= image_tag @item.get_image(300,300) %>
       </div>
       <div class="col-md-6">
         <div class="card-body">
           <h3 class="card-title">
             <%= @item.name %>
           </h3>
-          <p class="card-text" style="height: 5rem;">
+          <p class="card-text">
             <%= safe_join(@item.introduction.split("\n"),tag(:br)) %>
           </p>
           <h5 class="card-text">
@@ -18,6 +18,7 @@
           <%= form_with model: @cart_item,url: cart_items_path,method: :post do |f| %>
           <div class="row mt-4">
           <span class="col align-self-center">
+            <%= f.hidden_field :item_id, :value => @item.id %>
             <%= f.select :amount, *[1..10] ,prompt: "個数選択",class: "form-control" %>
           </span>
           <span class="col align-self-center">
