--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文履歴一覧</h4>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>注文商品</th>
+          <th>支払金額</th>
+          <th>ステータス</th>
+          <th>注文詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td class="align-middle"><%= order.created_at.strftime('%Y/%m/%d') %></td>
+            <td class="align-middle">
+              〒<%= order.postal_code %><br>
+              <%= order.address %><br>
+              <%= order.name %>
+            </td>
+            <td class="align-middle">
+              <% order.order_details.each do |order_detail| %>
+                <%= order_detail.item.name %><br>
+              <% end %>
+            </td>
+            <td class="align-middle"><%= order.total_payment %></td>
+            <td class="align-middle"><%= order.status %></td>
+            <td class="align-middle"><%= link_to "表示する",order_path(order.id),class: "btn btn-primary p-2" %></td>
+          </tr>
+      </tbody>
+    </table>
+  </div>
