--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -75,7 +75,11 @@
           会員ステータス
         </p>
         <h5 class="card-text col-10">
-          <%= @customer.is_deleted %>
+          <% if @customer.is_deleted == true%>
+            <p class="text-secondary">退会</p>
+          <% else %>
+            <p class="text-success">有効</p>
+          <% end %>
         </h5>
       </div>
     </div>
