--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4 my-3">
+      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文情報入力</h4>
+    </div>
+  </div>
+  <div class="row"></div>
