[update] 顧客側の作成と修正 ・カート内商品一覧画面のコード整理 ・アイテム詳細のコード整理 ・注文情報入力画面作成 ・注文情報確認画面作成 ・アクセス制限をアドレスコントローラー、カート内アイテムコントローラー、オーダーコントローラーに追記 ・オーダーコントローラー、newアクション、comfirmアクション作成 ・アドレスモデル、顧客モデル、オーダーモデルにメソッド作成、または修正。

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -43,7 +43,7 @@
         <tbody>
           <th>
             <td class="bg-secondary">合計金額</td>
-            <td><% @total +=  cart_item.subtotal %></td>
+            <td><% @total %></td>
           </th>
         </tbody>
       </table>
