--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -56,4 +56,15 @@
         <%= @order.name %>
       </li>
     </ul>
+    <div class="row">
+      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f|%>
+        <%= f.hidden_field :postage, :value => "800" %>
+        <%= f.hidden_field :total_payment, :value => @total %>
+        <%= f.hidden_field :payment_method %>
+        <%= f.hidden_field :postal_code %>
+        <%= f.hidden_field :address %>
+        <%= f.hidden_field :name %>
+        <%= f.submit '注文を確定する', class:'btn btn-lg btn-success'%>
+      <% end %>
+    </div>
   </div>
