--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -41,7 +41,9 @@
           <% end %>
         </tbody>
       </table>
-      <%= paginate @items %>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <%= paginate @items %>
   </div>
 </div>
