--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,13 +56,13 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to(users_path,class: "nav-link text-white") do %>
+                  <%= link_to(admin_customers_path,class: "nav-link text-white") do %>
                    <i class="fas fa-users"></i>
                    <span>会員一覧</span>
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to(admin_customers_path,class: "nav-link text-white") do %>
+                  <%= link_to(admin_root_path,class: "nav-link text-white") do %>
                    <i class="fas fa-book-open"></i>
                    <span>注文履歴一覧</span>
                   <% end %>
